--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     </div>
                     <div class="project-info">
                         <p>Simulates the physics of a 3D hanging rope. Has various settings such a gravity, timestep and spring constant.</p>
-                        <a class="project-url" href="https://jmhirano10.github.io/">Demo</a>
+                        <a class="project-url" href="https://jmhirano10.github.io/RopeSimulator/">Demo</a>
                     </div>
                 </div>
             </div>
