--- a/index.html
+++ b/index.html
@@ -56,6 +56,18 @@
                 </div>
                 <div class="projects-item">
                     <div class="project-type">
+                        <i class="bi bi-joystick"></i>
+                    </div>
+                    <div class="project-name">
+                        <h4>Flashcard Quizzer</h4>
+                    </div>
+                    <div class="project-info">
+                        <p>Flashcard application built with Python. The gui was made using tkinter.</p>
+                        <a class="project-url" href="https://github.com/jmhirano10/FlashcardApp">Code</a>
+                    </div>
+                </div>
+                <div class="projects-item">
+                    <div class="project-type">
                         <i class="bi bi-tornado"></i>  
                     </div>
                     <div class="project-name">
