--- a/index.html
+++ b/index.html
@@ -22,6 +22,18 @@
                         <i class="bi bi-tornado"></i>
                     </div>
                     <div class="project-name">
+                        <h4>AudioTouch</h4>
+                    </div>
+                    <div class="project-info">
+                        <p>Allows the user to playback and modify audio. Build on the Web Audio API.</p>
+                        <a class="project-url" href="https://jmhirano10.github.io/AudioTouch/">Demo</a>
+                    </div>
+                </div>
+                <div class="projects-item">
+                    <div class="project-type">
+                        <i class="bi bi-tornado"></i>
+                    </div>
+                    <div class="project-name">
                         <h4>Orbit Simulator</h4>
                     </div>
                     <div class="project-info">
