--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         <h4>AudioTouch</h4>
                     </div>
                     <div class="project-info">
-                        <p>Allows the user to playback and modify audio. Build on the Web Audio API.</p>
+                        <p>Allows the user to playback and modify mp3 files. Build on the Web Audio API.</p>
                         <a class="project-url" href="https://jmhirano10.github.io/AudioTouch/">Demo</a>
                     </div>
                 </div>
@@ -50,7 +50,7 @@
                         <h4>MAL Data Visualizer</h4>
                     </div>
                     <div class="project-info">
-                        <p>Gets data from the JIKAN unofficial MAL api and displayes it in visual form on the application</p>
+                        <p>Retrieves data from the JIKAN api and displays it in visual format on the webpage. Built using Graph.js.</p>
                         <a class="project-url" href="https://jmhirano10.github.io/MALDataVisualizer/">Demo</a>
                     </div>
                 </div>
